# Only allow `stable-x86_64-pc-windows-gnu` toolchain because of the cgo

[package]
name = "xray-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cgo = { git = "https://github.com/time-river/cgo-rs.git", branch = "main" }
